--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
           with:
             name: 'email-processor'
             runtime: 'python311'
-            memory_db: '256'
+            memory_mb: '256'
             region: 'asia-south1'
             env_vars: 'WATCH_EMAIL=${{ secrets.WATCH_EMAIL }},WATCH_PASSWORD=${{ secrets.WATCH_PASSWORD }}'
             source_dir: './app'
