--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -55,6 +55,7 @@ jobs:
             --set-env-vars=[WATCH_EMAIL=${{ secrets.WATCH_EMAIL }},WATCH_PASSWORD=${{ secrets.WATCH_PASSWORD }}]
             --timeout=300
             --allow-unauthenticated
+            --trigger-http
             --gen2
     
         - id: 'test'
