upload mails to drive

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,6 +17,11 @@ jobs:
         
         steps:
         - uses: 'actions/checkout@v3'
+
+        - name: Create service_account.json
+          run: |
+            touch app/service_account.json
+            printf '${{ secrets.GOOGLE_SERVICE_ACCOUNT }}' >> app/service_account.json
     
         - id: 'auth'
           uses: 'google-github-actions/auth@v1'
@@ -31,7 +36,7 @@ jobs:
         #     runtime: 'python311'
         #     memory_mb: '256'
         #     region: 'asia-south1'
-        #     env_vars: 'WATCH_EMAIL=${{ secrets.WATCH_EMAIL }},WATCH_PASSWORD=${{ secrets.WATCH_PASSWORD }}'
+        #     env_vars: 'WATCH_EMAIL=${{secrets.WATCH_EMAIL}},WATCH_PASSWORD=${{secrets.WATCH_PASSWORD}},WATCH_FROM=${{secrets.WATCH_FROM}}'
         #     source_dir: './app'
         #     entry_point: 'handler'
         #     timeout: 300
@@ -53,11 +58,11 @@ jobs:
             --entry-point=handler
             --memory=256
             --max-instances=1
-            --set-env-vars=WATCH_EMAIL=${{ secrets.WATCH_EMAIL }},WATCH_PASSWORD=${{ secrets.WATCH_PASSWORD }}
+            --set-env-vars=WATCH_EMAIL=${{secrets.WATCH_EMAIL}},WATCH_PASSWORD=${{secrets.WATCH_PASSWORD}},WATCH_FROM=${{secrets.WATCH_FROM}}
             --timeout=300
             --allow-unauthenticated
             --trigger-http
             --gen2
     
-        - id: 'test'
-          run: 'curl "${{ steps.deploy.outputs.url }}"'
+        # - id: 'test'
+        #   run: 'curl "${{steps.deploy.outputs.url}}"'
